--- a/DAO/DAL.csproj
+++ b/DAO/DAL.csproj
@@ -43,10 +43,13 @@
     <Compile Include="DAO\DepartmentDAO.cs" />
     <Compile Include="DAO\EmployeeContext.cs" />
     <Compile Include="DAO\PositionDAO.cs" />
+    <Compile Include="DAO\TaskDAO.cs" />
     <Compile Include="DTO\EmployeeDetailsDTO.cs" />
     <Compile Include="DTO\EmployeeDTO.cs" />
     <Compile Include="DTO\PositionDTO.cs" />
     <Compile Include="DAO\EmployeeDAO.cs" />
+    <Compile Include="DTO\TaskDetailDTO.cs" />
+    <Compile Include="DTO\TaskDTO.cs" />
     <Compile Include="EmployeeDataClass.designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
