--- a/DAO/DAL.csproj
+++ b/DAO/DAL.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="DAO\DepartmentDAO.cs" />
     <Compile Include="DAO\EmployeeContext.cs" />
+    <Compile Include="DAO\PermissionDAO.cs" />
     <Compile Include="DAO\PositionDAO.cs" />
     <Compile Include="DAO\SalaryDAO.cs" />
     <Compile Include="DAO\TaskDAO.cs" />
@@ -53,6 +54,7 @@
     <Compile Include="DTO\SalaryDTO.cs" />
     <Compile Include="DTO\TaskDetailDTO.cs" />
     <Compile Include="DTO\TaskDTO.cs" />
+    <Compile Include="DTO\UserDTO.cs" />
     <Compile Include="EmployeeDataClass.designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
