--- a/DAO/DAL.csproj
+++ b/DAO/DAL.csproj
@@ -48,6 +48,8 @@
     <Compile Include="DAO\TaskDAO.cs" />
     <Compile Include="DTO\EmployeeDetailsDTO.cs" />
     <Compile Include="DTO\EmployeeDTO.cs" />
+    <Compile Include="DTO\PermissionDetailsDTO.cs" />
+    <Compile Include="DTO\PermissionDTO.cs" />
     <Compile Include="DTO\PositionDTO.cs" />
     <Compile Include="DAO\EmployeeDAO.cs" />
     <Compile Include="DTO\SalaryDetailsDTO.cs" />
