--- a/DAO/DAL.csproj
+++ b/DAO/DAL.csproj
@@ -50,6 +50,7 @@
     <Compile Include="DTO\EmployeeDTO.cs" />
     <Compile Include="DTO\PermissionDetailsDTO.cs" />
     <Compile Include="DTO\PermissionDTO.cs" />
+    <Compile Include="DTO\PermissionStates.cs" />
     <Compile Include="DTO\PositionDTO.cs" />
     <Compile Include="DAO\EmployeeDAO.cs" />
     <Compile Include="DTO\SalaryDetailsDTO.cs" />
